tests/paczka1/fuzzy1/17350074.err
Error in line 2: A6 A645 2,9
Error in line 8: A6 A641 8,7
Error in line 12: A6 A641 25,7
Error in line 9: jMw S589 85,4
Error in line 5: zLxF1D2 A645 61,8
Error in line 24: A6 S589 15,2
Error in line 32: jMw A6 81,2
Error in line 33: jMw A645 82,2
Error in line 40: A6 S589 50,5
